--- a/styles/architect.css
+++ b/styles/architect.css
@@ -7,6 +7,12 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Work Sans', sans-serif;
 }
+
+.text-light-gray{
+
+    color:  #727272
+}
+    
 .btn-primary{
         border-radius: 8px;
         background: #FF900E;
@@ -58,58 +64,42 @@ nav li a{
     font-size: 4rem;
     color: #131313;
 }
-.banner-description{
-    color:  #727272
-}
+
+
 .banner-img {
     width: 100%;
     margin-top: 20px;
 }
-/* responsive media query */
-/* mobile devices */
-@media screen and (max-width: 576px) {
-    .header{
-        padding: 20px;
-    }
-    
-}
-    nav{
-    flex-direction: column;
-}
-/* tablet or medium devices */
-@media screen and (min-width: 576px) and (max-width: 960px) {
-    .header{
-        padding: 50px;
-    }
-    nav{
-        flex-direction: column;
-    }
-    
-}
+
 /* main styles */
     main{
         max-width: 1440px;
-        margin: 0 auto;
+        margin: 70px auto;
     }
+
     /* teams styles */
     .teams-container{
         display: flex;
         align-items: center;
     }
+
     .teams-img-container{
         display: grid;
         grid-template-columns: repeat(2,1fr);
         gap: 1.5rem;
     }
+
     .teams-content{
         padding-left: 70px;
         padding-right: 70px;
     }
+
     .teams-title{
         font-size: 2.8rem;
     }
+
     .teams-title .quick-list{
-        color: #727272;
+        text-light-gray
         font-weight: 500;
 
     }
@@ -117,3 +107,37 @@ nav li a{
         color: #FF900E;
         font-weight: 700;
     }
+
+    /* responsive media query */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    .header{
+        padding: 20px;
+    }
+    
+}
+    nav,
+    .teams-container
+    {
+    flex-direction: column;
+}
+
+/* tablet or medium devices */
+@media screen and (min-width: 576px) and (max-width: 960px) {
+    .header{
+        padding: 50px;
+    }
+    nav,
+    .teams-container
+    {
+        flex-direction: column;
+    }
+    .teams-img-container{
+        grid-template-columns: 1fr;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+}
+
+   
